--- a/index_list.html
+++ b/index_list.html
@@ -94,21 +94,21 @@
               </div>
             </div>
             <div class="form-group" id="ime">
-              <label for="id_first">Ime:</label>
+              <label>Ime:</label>
               <div class="row form-animation">
                 <span id="steps2" class="animation-circle steps">2</span>
                 <input type="text" id="id_firstname" name="first" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
-              <label for="id_last">Prezime:</label>
+              <label>Prezime:</label>
               <div class="row form-animation">
                 <span id="steps3" class="animation-circle steps">3</span>
                 <input type="text" id="id_lastname" name="last" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
-              <label for="id_age">Godine:</label>
+              <label>Godine:</label>
               <div class="row form-animation">
                 <span id="steps4" class="animation-circle steps">4</span>
                 <input type="number" id="id_age" name="age">
@@ -116,21 +116,21 @@
             </div>
             <hr>
             <div class="form-group">
-              <label for="id_email">Email adresa:</label>
+              <label>Email adresa:</label>
               <div class="row form-animation">
                 <span id="steps5" class="animation-circle steps">5</span>
                 <input type="email" id="id_email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
               </div>
             </div>
             <div class="form-group">
-              <label for="id_phone">Broj telefona:</label>
+              <label>Broj telefona:</label>
               <div class="row form-animation">
                 <span id="steps6" class="animation-circle steps">6</span>
                 <input type="tel" id="id_phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
               </div>
             </div>
             <div class="form-group">
-              <label for="id_cell">Broj mobilnog telefona:</label>
+              <label>Broj mobilnog telefona:</label>
               <div class="row form-animation">
                 <span id="steps7" class="animation-circle steps">7</span>
                 <input type="tel" id="id_cell" name="cell" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
@@ -138,21 +138,21 @@
             </div>
             <hr>
             <div class="form-group">
-              <label for="id_state">Drzava:</label>
+              <label>Drzava:</label>
               <div class="row form-animation">
                 <span id="steps8" class="animation-circle steps">8</span>
                 <input type="text" id="id_state" name="state" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
-              <label for="id_city">Grad:</label>
+              <label>Grad:</label>
               <div class="row form-animation">
                 <span id="steps9" class="animation-circle steps">9</span>
                 <input type="text" id="id_city" name="city" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
-              <label for="id_street">Ulica:</label>
+              <label>Ulica:</label>
               <div class="row form-animation">
                 <span id="steps10" class="animation-circle steps">10</span>
                 <input type="text" id="id_street" name="street" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
@@ -160,7 +160,7 @@
             </div>
             <hr>
             <div class="form-group">
-              <label for="id_nat">Drzavljanstvo:</label>
+              <label>Drzavljanstvo:</label>
               <div class="row form-animation">
                 <span class="animation-circle steps">11</span>
                 <input type="text" id="id_nat" name="nat">
