--- a/index_list.html
+++ b/index_list.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
   <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
   crossorigin="anonymous"></script>
-  <script src="./js/jquery-3.3.1.min.js" type="text/javascript"></script>
+  <script src="./js/jquery-3.3.1.min.js"></script>
 
 </head>
 
@@ -179,9 +179,9 @@
 
   <!-- END OF MODAL ADD -->
 
-  <script src="./js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="./js/fetched_data.js" type="text/javascript"></script>
-  <script src="./js/main.js" type="text/javascript"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/fetched_data.js"></script>
+  <script src="./js/main.js"></script>
 
 
 </body>
