--- a/index_list.html
+++ b/index_list.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
   <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
-  crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
   <script src="./js/jquery-3.3.1.min.js"></script>
 
 </head>
@@ -119,7 +119,8 @@
               <label>Email adresa:</label>
               <div class="row form-animation">
                 <span id="steps5" class="animation-circle steps">5</span>
-                <input type="email" id="id_email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                <input type="email" id="id_email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                  required>
               </div>
             </div>
             <div class="form-group">
