--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Kontakt Baza Podataka</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
